  The default values are 0 which has the interpretation "do not limit
  based on the total estimated size".
  There are corresponding methods to read and set the new configuration
  parameters.

  XXX There are known issues with this implementation that need to be
  sorted out before it is "released".

3.9.0a5 (2008-11-??)
====================

New Features
------------

- Object saves are a little faster

3.9.0a4 (2008-11-06)
====================

Bug Fixes
---------

- DemoStorage could sometimes hand out the same new object id more
  than once.

3.9.0a3 (2008-11-04)
====================

New Features
------------

- FileStorage now provides optional garbage collection.  A 'gc'
  keyword option can be passed to the pack method.  A false value
  prevents garbage collection.

- The FileStorage constructor now provides a boolean pack_gc option,
  which defaults to True, to control whether garbage collection is
  performed when packing by default. This can be overridden with the
  gc option to the pack method.

  The ZConfig configuration for FileStorage now includes a pack-gc
  option, corresponding to the pack_gc constructor argument.

- The FileStorage constructor now has a packer keyword argument that
  allows an alternative packer to be supplied.

  The ZConfig configuration for FileStorage now includes a packer
  option, corresponding to the packer constructor argument.

Bug Fixes
---------

- DemoStorage could sometimes hand out the same new object id more
  than once.

3.9.0a2 (2008-10-31)
====================

Bug Fixes
---------

- MappingStorage hung when committing a transaction *after* committing
  an empty transaction.

3.9.0a1 (2008-10-29)
====================

New Features
------------

- MappingStorage now supports multi-version concurrency control and
  iteration and provides a better storage implementation example.

- DemoStorage has a number of new features:

  - The ability to use a separate storage, such as a file storage to
    store changes
